--- a/pack/pyd.evb.template
+++ b/pack/pyd.evb.template
@@ -94,6 +94,88 @@
             <PassCommandLine>False</PassCommandLine>
             <HideFromDialogs>0</HideFromDialogs>
           </File>
+          <File>
+            <Type>3</Type>
+            <Name>py_langs</Name>
+            <Action>0</Action>
+            <OverwriteDateTime>False</OverwriteDateTime>
+            <OverwriteAttributes>False</OverwriteAttributes>
+            <HideFromDialogs>0</HideFromDialogs>
+            <Files>
+              <File>
+                <Type>2</Type>
+                <Name>langs.pyd</Name>
+                <File>C:\Users\Public\Run_TWLMagician.dist\py_langs\langs.pyd</File>
+                <ActiveX>False</ActiveX>
+                <ActiveXInstall>False</ActiveXInstall>
+                <Action>0</Action>
+                <OverwriteDateTime>False</OverwriteDateTime>
+                <OverwriteAttributes>False</OverwriteAttributes>
+                <PassCommandLine>False</PassCommandLine>
+                <HideFromDialogs>0</HideFromDialogs>
+              </File>
+              <File>
+                <Type>2</Type>
+                <Name>po2buf.pyd</Name>
+                <File>C:\Users\Public\Run_TWLMagician.dist\py_langs\po2buf.pyd</File>
+                <ActiveX>False</ActiveX>
+                <ActiveXInstall>False</ActiveXInstall>
+                <Action>0</Action>
+                <OverwriteDateTime>False</OverwriteDateTime>
+                <OverwriteAttributes>False</OverwriteAttributes>
+                <PassCommandLine>False</PassCommandLine>
+                <HideFromDialogs>0</HideFromDialogs>
+              </File>
+            </Files>
+          </File>
+          <File>
+            <Type>2</Type>
+            <Name>appgen.pyd</Name>
+            <File>C:\Users\Public\Run_TWLMagician.dist\appgen.pyd</File>
+            <ActiveX>False</ActiveX>
+            <ActiveXInstall>False</ActiveXInstall>
+            <Action>0</Action>
+            <OverwriteDateTime>False</OverwriteDateTime>
+            <OverwriteAttributes>False</OverwriteAttributes>
+            <PassCommandLine>False</PassCommandLine>
+            <HideFromDialogs>0</HideFromDialogs>
+          </File>
+          <File>
+            <Type>2</Type>
+            <Name>pyutils.pyd</Name>
+            <File>C:\Users\Public\Run_TWLMagician.dist\pyutils.pyd</File>
+            <ActiveX>False</ActiveX>
+            <ActiveXInstall>False</ActiveXInstall>
+            <Action>0</Action>
+            <OverwriteDateTime>False</OverwriteDateTime>
+            <OverwriteAttributes>False</OverwriteAttributes>
+            <PassCommandLine>False</PassCommandLine>
+            <HideFromDialogs>0</HideFromDialogs>
+          </File>
+          <File>
+            <Type>2</Type>
+            <Name>tooltip.pyd</Name>
+            <File>C:\Users\Public\Run_TWLMagician.dist\tooltip.pyd</File>
+            <ActiveX>False</ActiveX>
+            <ActiveXInstall>False</ActiveXInstall>
+            <Action>0</Action>
+            <OverwriteDateTime>False</OverwriteDateTime>
+            <OverwriteAttributes>False</OverwriteAttributes>
+            <PassCommandLine>False</PassCommandLine>
+            <HideFromDialogs>0</HideFromDialogs>
+          </File>
+          <File>
+            <Type>2</Type>
+            <Name>TWLMagician.pyd</Name>
+            <File>C:\Users\Public\Run_TWLMagician.dist\TWLMagician.pyd</File>
+            <ActiveX>False</ActiveX>
+            <ActiveXInstall>False</ActiveXInstall>
+            <Action>0</Action>
+            <OverwriteDateTime>False</OverwriteDateTime>
+            <OverwriteAttributes>False</OverwriteAttributes>
+            <PassCommandLine>False</PassCommandLine>
+            <HideFromDialogs>0</HideFromDialogs>
+          </File>
         </Files>
       </File>
     </Files>
