--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Make distribution binaries
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   macos:
@@ -10,9 +12,11 @@ jobs:
     name: macOS
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
+        with:
+          submodules: recursive
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@main
         with:
           python-version: '3.x'
           architecture: 'x64'
@@ -24,85 +28,32 @@ jobs:
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
       - name: Make binary
         run: |
-          pyinstaller --add-data "tools/Darwin/*:Darwin" HiyaCFW_Helper.py
+          pyinstaller --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" TWLMagician.py
           cd dist
-          zip -r ../HiyaCFW-Helper-macOS.zip HiyaCFW_Helper
+          zip -r ../TWLMagician-macOS.zip TWLMagician
       - name: Publish artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@main
         with:
-          path: HiyaCFW-Helper-macOS.zip
+          path: TWLMagician-macOS.zip
           name: macos
 
-  windows:
-    runs-on: windows-latest
-    name: Windows
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-          architecture: 'x86'
-      - name: Install pyinstaller
-        run: |
-          pip3 install pyinstaller==3.6
-      - name: Get tag
-        id: vars
-        shell: bash
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-      - name: Make binary
-        run: |
-          pyinstaller --onefile HiyaCFW_Helper.py
-          mkdir dist\Windows
-          cp tools\Windows\fatcat.exe dist\Windows
-          cp tools\Windows\7za.exe dist\Windows
-          cp tools\Windows\7za.exe dist
-          cd dist
-          .\7za.exe a ../HiyaCFW-Helper-Win.zip HiyaCFW_Helper.exe Windows
-      - name: Publish artifact
-        uses: actions/upload-artifact@v2
-        with:
-          path: HiyaCFW-Helper-Win.zip
-          name: windows
-
-  python:
+  Linux:
     runs-on: ubuntu-latest
-    name: Python 3
+    name: Linux
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
+        with:
+          submodules: recursive
       - name: Get tag
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
       - name: Make binary
         run: |
-          zip HiyaCFW-Helper-Python3.zip HiyaCFW_Helper.py requirements.txt
-          cd tools
-          zip -ur ../HiyaCFW-Helper-Python3.zip *
+          zip TWLMagician-Python3-Linux.zip TWLMagician.py appgen.py requirements.txt
+          zip -ur ../TWLMagician-Python3-Linux.zip Linux py_langs rmdot_files tk_tooltip i18n
       - name: Publish artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@main
         with:
-          path: HiyaCFW-Helper-Python3.zip
-          name: python
-
-  publish:
-    runs-on: ubuntu-latest
-    name: Publish builds
-    if: ${{ success() }}
-    needs: [macos, windows, python] # Add linux if re-adding
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-      - name: Upload to release
-        run: |
-          ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)
-
-          for file in ${{ github.workspace }}/*/*; do
-            AUTH_HEADER="Authorization: token ${{ secrets.GITHUB_TOKEN }}"
-            CONTENT_LENGTH="Content-Length: $(stat -c%s $file)"
-            CONTENT_TYPE="Content-Type: application/7z-x-compressed"
-            UPLOAD_URL="https://uploads.github.com/repos/${{ github.repository }}/releases/$ID/assets?name=$(basename $file)"
-
-            curl -XPOST -H "$AUTH_HEADER" -H "$CONTENT_LENGTH" -H "$CONTENT_TYPE" --upload-file "$file" "$UPLOAD_URL"
-          done
+          path: TWLMagician-Python3-Linux.zip
+          name: Linux
