--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Make binary
         run: |
           zip TWLMagician-Python3-Linux.zip TWLMagician.py appgen.py requirements.txt pyutils.py
-          zip -ur TWLMagician-Python3-Linux.zip Linux py_langs rmdot_files tk_tooltip i18n
+          zip -ur TWLMagician-Python3-Linux.zip Linux py_langs tk_tooltip i18n
       - name: Publish artifact
         uses: actions/upload-artifact@main
         with:
