--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,12 @@ jobs:
         uses: actions/setup-python@main
         with:
           python-version: '3.x'
-          architecture: 'x64'
       - name: Install pyinstaller
         run: |
           pip3 install certifi pyinstaller
       - name: Make binary
         run: |
-          pyinstaller --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" TWLMagician.py
+          pyinstaller --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" --target-architecture universal2 TWLMagician.py
           cd dist
           zip -r ../TWLMagician-macOS.zip TWLMagician
       - name: Publish artifact
