--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -106,3 +105,5 @@ venv.bak/
 
 # MacOS annoying file
 .DS_Store
+
+*.zip
