Try fix the icon issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           pip3 install certifi pyinstaller
       - name: Make binary
         run: |
-          pyinstaller --onefile --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" --target-architecture universal2 TWLMagician.py
+          pyinstaller --onefile --add-data "Darwin/*:Darwin" --add-data "icon.ico:icon.ico" --add-data "i18n/*:i18n" --target-architecture universal2 TWLMagician.py
           cd dist
           zip -r ../TWLMagician-macOS.zip TWLMagician
       - name: Publish artifact
@@ -43,7 +43,7 @@ jobs:
           submodules: recursive
       - name: Make binary
         run: |
-          zip TWLMagician-Python3-Linux.zip TWLMagician.py appgen.py requirements.txt pyutils.py icon.png
+          zip TWLMagician-Python3-Linux.zip TWLMagician.py appgen.py requirements.txt pyutils.py
           zip -ur TWLMagician-Python3-Linux.zip Linux py_langs tk_tooltip i18n
       - name: Publish artifact
         uses: actions/upload-artifact@main
