--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,23 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@main
         with:
-          python-version: '3.x'
-      - name: Install pyinstaller
+          python-version: '3.13'
+      - name: Upgrade pip and install delocate
         run: |
-          pip3 install --only-binary=:all: pillow
+          python3 -m pip install --upgrade pip
+          python3 -m pip install delocate
+      - name: Download Pillow wheels (x86_64 and arm64)
+        run: |
+          python3 -m pip download --only-binary=:all: --platform macosx_10_13_x86_64 --implementation cp --python-version 313 --abi cp313 Pillow
+          python3 -m pip download --only-binary=:all: --platform macosx_11_0_arm64 --implementation cp --python-version 313 --abi cp313 Pillow
+      - name: Fuse into universal2 wheel
+        run: >
+          python3 -c "from delocate.fuse import fuse_wheels; fuse_wheels('Pillow-11.2.0-cp313-cp313-macosx_10_13_x86_64.whl', 'Pillow-11.2.0-cp313-cp313-macosx_11_0_arm64.whl', 'Pillow-11.2.0-cp313-cp313-macosx_11_0_universal2.whl')"
+      - name: Install universal2 Pillow wheel
+        run: |
+          python3 -m pip install Pillow-11.2.0-cp313-cp313-macosx_11_0_universal2.whl
+      - name: Install pyinstaller and ttkbootstrap
+        run: |
           pip3 install pyinstaller ttkbootstrap
       - name: Make binary
         run: |
