--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,14 @@ jobs:
           python3 -m pip install delocate
       - name: Download Pillow wheels (x86_64 and arm64)
         run: |
-          python3 -m pip download --only-binary=:all: --platform macosx_10_13_x86_64 --implementation cp --python-version 313 --abi cp313 Pillow
-          python3 -m pip download --only-binary=:all: --platform macosx_11_0_arm64 --implementation cp --python-version 313 --abi cp313 Pillow
+          python3 -m pip download --only-binary=:all: --platform macosx_10_13_x86_64 --implementation cp --python-version 313 --abi cp313 Pillow==11.1.0
+          python3 -m pip download --only-binary=:all: --platform macosx_11_0_arm64 --implementation cp --python-version 313 --abi cp313 Pillow==11.1.0
       - name: Fuse into universal2 wheel
         run: >
-          python3 -c "from delocate.fuse import fuse_wheels; fuse_wheels('Pillow-11.3.0-cp313-cp313-macosx_10_13_x86_64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_arm64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl')"
+          python3 -c "from delocate.fuse import fuse_wheels; fuse_wheels('Pillow-11.1.0-cp313-cp313-macosx_10_13_x86_64.whl', 'Pillow-11.1.0-cp313-cp313-macosx_11_0_arm64.whl', 'Pillow-11.1.0-cp313-cp313-macosx_11_0_universal2.whl')"
       - name: Install universal2 Pillow wheel
         run: |
-          python3 -m pip install Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl
+          python3 -m pip install Pillow-11.1.0-cp313-cp313-macosx_11_0_universal2.whl
       - name: Install pyinstaller and ttkbootstrap
         run: |
           pip3 install pyinstaller ttkbootstrap
