--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,13 @@ jobs:
       - name: Fuse into universal2 wheel
         run: >
           python3 -c "from delocate.fuse import fuse_wheels; fuse_wheels('Pillow-11.3.0-cp313-cp313-macosx_10_13_x86_64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_arm64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl')"
+      - name: Install pyinstaller and ttkbootstrap
+        run: |
+          pip3 install pyinstaller
+          pip3 install ttkbootstrap
       - name: Install universal2 Pillow wheel
         run: |
           python3 -m pip install Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl
-      - name: Install pyinstaller and ttkbootstrap
-        run: |
-          pip3 install pyinstaller==6.12.0
-          pip3 install ttkbootstrap
       - name: Make binary
         run: |
           pyinstaller --onefile --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" --target-architecture universal2 TWLMagician.py
