--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,14 +30,19 @@ jobs:
           python3 -m pip download --only-binary=:all: --platform macosx_11_0_arm64 --implementation cp --python-version 313 --abi cp313 Pillow
       - name: Fuse into universal2 wheel
         run: >
-          python3 -c "from delocate.fuse import fuse_wheels; fuse_wheels('Pillow-11.3.0-cp313-cp313-macosx_10_13_x86_64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_arm64.whl', 'Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl')"
+          python3 -c "import re, glob; from delocate.fuse import fuse_wheels;
+                      x86 = sorted([w for w in glob.glob('Pillow-*.whl') if 'x86_64' in w])[-1];
+                      arm = sorted([w for w in glob.glob('Pillow-*.whl') if 'arm64' in w])[-1];
+                      out = 'Pillow-macosx_universal2.whl';
+                      print(f'Fusing {x86} + {arm} -> {out}');
+                      fuse_wheels(x86, arm, out)"
       - name: Install pyinstaller and ttkbootstrap
         run: |
           pip3 install pyinstaller
           pip3 install ttkbootstrap
       - name: Install universal2 Pillow wheel
         run: |
-          python3 -m pip install Pillow-11.3.0-cp313-cp313-macosx_11_0_universal2.whl --force-reinstall
+          python3 -m pip install Pillow-macosx_universal2.whl --force-reinstall
       - name: Make binary
         run: |
           pyinstaller --onefile --add-data "Darwin/*:Darwin" --add-data "i18n/*:i18n" --target-architecture universal2 TWLMagician.py
