--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,7 @@ jobs:
           python3 -m pip download --only-binary=:all: --platform macosx_10_13_x86_64 --implementation cp --python-version 313 --abi cp313 Pillow
           python3 -m pip download --only-binary=:all: --platform macosx_11_0_arm64 --implementation cp --python-version 313 --abi cp313 Pillow
       - name: Fuse into universal2 wheel
-        run: >
-          python3 -c "import re, glob; from delocate.fuse import fuse_wheels;
-                      x86 = sorted([w for w in glob.glob('Pillow-*.whl') if 'x86_64' in w])[-1];
-                      arm = sorted([w for w in glob.glob('Pillow-*.whl') if 'arm64' in w])[-1];
-                      out = 'Pillow-macosx_universal2.whl';
-                      print(f'Fusing {x86} + {arm} -> {out}');
-                      fuse_wheels(x86, arm, out)"
+        run: python3 -c "import glob, sys; from delocate.fuse import fuse_wheels; wheels=glob.glob('Pillow-*.whl'); x86=sorted([w for w in wheels if 'x86_64' in w]); arm=sorted([w for w in wheels if 'arm64' in w]); out='Pillow-macosx_universal2.whl'; print(f'Fusing {x86[-1]} + {arm[-1]} -> {out}'); fuse_wheels(x86[-1], arm[-1], out)"
       - name: Install pyinstaller and ttkbootstrap
         run: |
           pip3 install pyinstaller
